# ai_model_platform

./: .gitignore  DEPLOY.md  README.md  README_APPLICATION_CREATION.md  application_center_user_guide.md  application_creation_flow.md  application_workflow_analysis.md  docker-compose.yml  docker_deploy.sh  init_app.sh  production_deploy.sh  project_summary.md  quick_start.sh  restart.sh  start.sh  test_login.html
backend/: .env  Dockerfile  check_data.py  check_db.py  create_dashboard_data.py  create_evaluation_data.py  create_superuser.py  create_test_data.py  create_test_user.py  environment.yml  generate_test_data.py  init_db.py  init_sample_data.py  manage.py  pyproject.toml  requirements.txt  reset_user_password.py  test_api.py  test_login.py
backend/api/: __init__.py  serializers.py  urls.py  views.py
backend/api_connector/: apps.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
backend/app/api/: api.py  (+2 more)
backend/app_center/: README.md  __init__.py  init_applications.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/big_model_app/: __init__.py  apps.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/data_center/: __init__.py  init_datasets.py  init_knowledge_base.py  models.py  models_new.py  serializers.py  serializers_new.py  urls.py  views.py  views_new.py
backend/evaluation_center/: __init__.py  init_test_data.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/training_center/: __init__.py  init_training.py  init_training_jobs.py  models.py  serializers.py  tasks.py  urls.py  views.py
(+133 files in other folders)
